force-app/main/default/objects/Account/fields/Gross_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Gross_Revenue__c</fullName>
    <formula>Revenue_generated_from_opportunity__c + Revenue_genrated_from_contact__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>