force-app/main/default/objects/Account/fields/Revenue_generated_from_opportunity__c.field-meta.xml
<CustomField>
    <fullName>Revenue_generated_from_opportunity__c</fullName>
    <label>Revenue generated from opportunity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>