force-app/main/default/objects/Account/fields/Revenue_genrated_from_contact__c.field-meta.xml
<CustomField>
    <fullName>Revenue_genrated_from_contact__c</fullName>
    <label>Revenue genrated from contact</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>