force-app/main/default/objects/Account/fields/totalQuanityOfMinProduct__c.field-meta.xml
<CustomField>
    <fullName>totalQuanityOfMinProduct__c</fullName>
    <label>totalQuanityOfMinProduct</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>